--- a/debian/control
+++ b/debian/control
@@ -1,15 +1,30 @@
-Source: template-repository
-Section: unknown
+Source: golang-github-moby-term
+Section: golang
 Priority: optional
-Maintainer: Tsic404 <liuheng@deepin.org>
-Build-Depends: debhelper (>= 11)
-Standards-Version: 4.1.3
-Homepage: https://github.com/deepin-community/template-repository
-#Vcs-Browser: https://salsa.debian.org/debian/deepin-community-template-repository
-#Vcs-Git: https://salsa.debian.org/debian/deepin-community-template-repository.git
+Maintainer: Debian Go Packaging Team <team+pkg-go@tracker.debian.org>
+Uploaders: Francisco Vilmar Cardoso Ruviaro <vilmar@debian.org>
+Build-Depends: debhelper-compat (= 13),
+               dh-golang,
+               golang-any,
+               golang-github-creack-pty-dev,
+               golang-github-google-go-cmp-dev,
+               golang-github-gotestyourself-gotest.tools-dev,
+               golang-golang-x-sys-dev
+Standards-Version: 4.6.2
+Rules-Requires-Root: no
+Homepage: https://github.com/moby/term
+Vcs-Browser: https://salsa.debian.org/go-team/packages/golang-github-moby-term
+Vcs-Git: https://salsa.debian.org/go-team/packages/golang-github-moby-term.git
+Testsuite: autopkgtest-pkg-go
+XS-Go-Import-Path: github.com/moby/term
 
-Package: template-repository
-Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: <insert up to 60 chars description>
- <insert long description, indented with spaces>
+Package: golang-github-moby-term-dev
+Architecture: all
+Depends: golang-github-creack-pty-dev,
+         golang-github-google-go-cmp-dev,
+         golang-github-gotestyourself-gotest.tools-dev,
+         golang-golang-x-sys-dev,
+         ${misc:Depends}
+Description: utilities for dealing with terminals
+ term provides structures and helper functions to work with terminal
+ (state, sizes).
